--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -27,8 +27,8 @@
             <td class="tilt">
               <div class="sixth express-destination" data-destination="Ireland">
                 <div>
-                  <img class="expresspic darken" src="/images/ireland1.jpg">
-                  <div class="expbig flotbot italic">Ireland</div>
+                  <img class="expresspic darken" src="/images/polaroidireland1.jpg">
+                  <!-- <div class="expbig flotbot italic">Ireland</div> -->
                 </div>
               <div class="expressright">
                 <div class="expbig">7 Days</div><br>
@@ -41,8 +41,8 @@
             <td class="tilt">
               <div class="sixth express-destination" data-destination="Orlando">
                 <div>
-                  <img class="expresspic darken" src="/images/orlando1.jpg">
-                  <div class="expbig flotbot italic">Orlando</div>
+                  <img class="expresspic darken" src="/images/polaroidorlando1.jpg">
+                  <!-- <div class="expbig flotbot italic">Orlando</div> -->
                 </div>
                 <div class="expressright">
                   <div class="expbig">7 Days</div><br>
@@ -55,8 +55,8 @@
             <td class="tilt">
               <div class="sixth express-destination" data-destination="Fiji">
                 <div>
-                  <img class="expresspic darken" src="/images/fiji1.jpg">
-                  <div class="expbig flotbot italic">Fiji</div>
+                  <img class="expresspic darken" src="/images/polaroidfiji1.jpg">
+                  <!-- <div class="expbig flotbot italic">Fiji</div> -->
                 </div>
                 <div class="expressright">
                   <div class="expbig">7 Days</div><br>
@@ -71,8 +71,8 @@
             <td class="tilt">
               <div class="sixth express-destination" data-destination="St Augustine">
                 <div>
-                  <img class="expresspic darken" src="/images/staugustine1.jpg">
-                  <div class="expbig flotbot italic">St Augustine</div>
+                  <img class="expresspic darken" src="/images/polaroidstaugustine1.jpg">
+                  <!-- <div class="expbig flotbot italic">St Augustine</div> -->
                 </div>
                 <div class="expressright">
                   <div class="expbig">7 Days</div><br>
@@ -85,8 +85,8 @@
             <td class="tilt">
               <div class="sixth express-destination" data-destination="Myrtle Beach">
                 <div>
-                  <img class="expresspic darken" src="/images/myrtlebeach1.jpg">
-                  <div class="expbig flotbot italic">Myrtle Beach</div>
+                  <img class="expresspic darken" src="/images/polaroidmyrtlebeach1.jpg">
+                  <!-- <div class="expbig flotbot italic">Myrtle Beach</div> -->
                 </div>
                 <div class="expressright">
                   <div class="expbig">7 Days</div><br>
@@ -99,8 +99,8 @@
             <td class="tilt">
               <div class="sixth express-destination" data-destination="Italy">
                 <div>
-                  <img class="expresspic darken" src="/images/italy1.jpg">
-                  <div class="expbig flotbot italic">Italy</div>
+                  <img class="expresspic darken" src="/images/polaroiditaly1.jpg">
+                  <!-- <div class="expbig flotbot italic">Italy</div> -->
                 </div>
               <div class="expressright">
                 <div class="expbig">7 Days</div><br>
@@ -114,7 +114,7 @@
         </table>
       </div>
 
-      <div id="reviewbox">
+      <div id="reviewboxe">
         <div id="reviewpic">
           <h3>Vacation</h3>
           <br>
@@ -171,7 +171,7 @@
         </div>
         <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
       </div>
-    </div> <!-- End of #reviewbox -->
+    </div> <!-- End of #reviewboxe -->
 
     <div id="reviewcongrats">
       <h6>Enjoy <span id="congratsloca"></span>!</h6>
