--- a/views/Shared/_display_buttons.ejs
+++ b/views/Shared/_display_buttons.ejs
@@ -1,18 +1,20 @@
-<div id="divDisplayButtons">
-  <a id="trigger" href="#"><img class="thumbpic darken" src="/images/ThumbsUp.jpg"></a>
+
+  <div id="divDisplayButtons" class="shadow">
+  <a id="trigger" href="#"><img class="thumbpic darken shadow" src="/images/ThumbsUp.jpg"></a>
   <table class="surveykeys">
     <tr>
-      <td><img id="up" class="arrow" src="/images/arrowup.jpg"></td>
+      <td><img id="up" class="arrow shadow" src="/images/arrowup.jpg"></td>
     </tr>
     <tr>
       <td>
         <form>
-          <input id="surveyvalue" step=".5" type="number" value="2"><br>
+          <input class="shadow" id="surveyvalue" step=".5" type="number" value="2"><br>
         </form>
       </td>
     </tr>
     <tr>
-      <td><img id="down" class="arrow" src="/images/arrowdown.jpg"></td>
+      <td><img id="down" class="arrow shadow" src="/images/arrowdown.jpg"></td>
     </tr>
   </table>
+  <img id="divDisplaysignbase" class="shadow" src="/images/signbase.jpg">
 </div>
