final final final

--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -99,7 +99,7 @@
             <td class="tilt">
               <div class="sixth express-destination" data-destination="Italy">
                 <div>
-                  <img class="expresspic darken" src="/images/polaroiditaly1.jpg">
+                  <img class="expresspic darken" src="/images/polaroidItaly1.jpg">
                   <!-- <div class="expbig flotbot italic">Italy</div> -->
                 </div>
               <div class="expressright">
