--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -32,7 +32,7 @@
               <a id="Fiji" href="#"><img class="darken" src="/images/polaroidfiji1.jpg"></a>
           </div>
           <div class="planlink tilt express-destination" data-destination="Italy">
-              <a id="Italy" href="#"><img class="darken" src="/images/polaroiditaly1.jpg"></a>
+              <a id="Italy" href="#"><img class="darken" src="/images/polaroidItaly1.jpg"></a>
           </div>
           <div class="planlink tilt express-destination" data-destination="Daytona">
               <a id="Daytona" href="#"><img class="darken" src="/images/polaroiddaytona1.jpg"></a>
@@ -111,7 +111,7 @@
     <div id="reviewcongrats" class="deadClass">
       <h6>Enjoy <span id="congratsloca"></span>!</h6>
       <br>
-      <h3>By Using <span id="moztars"></span> STARS, you just planned a 7 day vacation in <span id="congratslocb"></span> for</h3>
+      <h3>By Using <span id="moztars"></span>, you just planned a 7 day vacation in <span id="congratslocb"></span> for</h3>
       <br><br>
       <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
       <br>
