--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -120,12 +120,14 @@
           <br>
           <h4><div id="vacalocation"></div></h4>
           <h5>7 Days - One Bedroom Condo</h5>
-          <div id="rotating-item-wrapper" class="qpolfix">
-           <img id="planpic1" class="rotating-item Q-pol" src="/images/ireland1.jpg"/>
-           <img id="planpic2" class="rotating-item Q-pol" src="/images/ireland2.jpg"/>
-           <img id="planpic3" class="rotating-item Q-pol" src="/images/ireland3.jpg"/>
-           <img id="planpic4" class="rotating-item Q-pol" src="/images/ireland4.jpg"/>
-           <img id="planpic5" class="rotating-item Q-pol" src="/images/ireland5.jpg"/>
+          <div id="smallreviewphoto">
+            <div id="rotating-item-wrapper" class="qpolfix">
+             <img id="planpic1" class="rotating-item Q-pol shadow" src="/images/ireland1.jpg"/>
+             <img id="planpic2" class="rotating-item Q-pol shadow" src="/images/ireland2.jpg"/>
+             <img id="planpic3" class="rotating-item Q-pol shadow" src="/images/ireland3.jpg"/>
+             <img id="planpic4" class="rotating-item Q-pol shadow" src="/images/ireland4.jpg"/>
+             <img id="planpic5" class="rotating-item Q-pol shadow" src="/images/ireland5.jpg"/>
+            </div>
           </div>
         </div>
 
