--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -49,13 +49,14 @@
           <br>
           <h4><div id="vacalocation"></div></h4>
           <h5>7 Days - One Bedroom Condo</h5>
-          <!-- <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg"> -->
-          <div id="rotating-item-wrapper" class="qpolfix">
-           <img id="planpic1" class="rotating-item Q-pol shadow" src="/images/ireland1.jpg"/>
-           <img id="planpic2" class="rotating-item Q-pol shadow" src="/images/ireland2.jpg"/>
-           <img id="planpic3" class="rotating-item Q-pol shadow" src="/images/ireland3.jpg"/>
-           <img id="planpic4" class="rotating-item Q-pol shadow" src="/images/ireland4.jpg"/>
-           <img id="planpic5" class="rotating-item Q-pol shadow" src="/images/ireland5.jpg"/>
+          <div id="smallreviewphoto">
+            <div id="rotating-item-wrapper" class="qpolfix">
+             <img id="planpic1" class="rotating-item Q-pol shadow" src="/images/ireland1.jpg"/>
+             <img id="planpic2" class="rotating-item Q-pol shadow" src="/images/ireland2.jpg"/>
+             <img id="planpic3" class="rotating-item Q-pol shadow" src="/images/ireland3.jpg"/>
+             <img id="planpic4" class="rotating-item Q-pol shadow" src="/images/ireland4.jpg"/>
+             <img id="planpic5" class="rotating-item Q-pol shadow" src="/images/ireland5.jpg"/>
+            </div>
           </div>
         </div>
 
