final mods per 12/6/16

--- a/assets/styles/ken-burns-effect.css.less
+++ b/assets/styles/ken-burns-effect.css.less
@@ -107,15 +107,15 @@ figure {
   opacity: 0;
   /*animation*/
 
-  animation: slideShow 24s linear infinite 0s;
-  -o-animation: slideShow 24s linear infinite 0s;
-  -moz-animation: slideShow 24s linear infinite 0s;
-  -webkit-animation: slideShow 24s linear infinite 0s;
+  animation: slideShow 36s linear infinite 0s;
+  -o-animation: slideShow 36s linear infinite 0s;
+  -moz-animation: slideShow 36s linear infinite 0s;
+  -webkit-animation: slideShow 36s linear infinite 0s;
 }
 
 .pic-1 {
   opacity: 1;
-  background: url(/images/backgrounds/bg1.jpg) no-repeat center center;
+  background: url(/images/backgrounds/bg8.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -194,17 +194,17 @@ figure {
   background-size: cover;
 }
 
-.pic-8 {
-  animation-delay: 42s;
-  -o-animation-delay: 42s;
-  -moz--animation-delay: 42s;
-  -webkit-animation-delay: 42s;
-  background: url(/images/backgrounds/bg8.jpg) no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+// .pic-8 {
+//   animation-delay: 42s;
+//   -o-animation-delay: 42s;
+//   -moz--animation-delay: 42s;
+//   -webkit-animation-delay: 42s;
+//   background: url(/images/backgrounds/bg8.jpg) no-repeat center center;
+//   -webkit-background-size: cover;
+//   -moz-background-size: cover;
+//   -o-background-size: cover;
+//   background-size: cover;
+// }
 
 .pic-i1 {
   opacity: 1;
