--- a/views/CostOwner/index.ejs
+++ b/views/CostOwner/index.ejs
@@ -1,7 +1,7 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-      <h1>Owner Calculator</h1>
+      <h1><span id="hheader">Owner Calculator</span></h1>
       <table id="questiontable">
         <tr>
           <td id="gc1" class="surveytext owner">What are the yearly maintenance fees?</td>
@@ -79,7 +79,7 @@
 </div>
 
     <%- partial('../Shared/_display_buttons.ejs') %>
-    
+
   </div>
 </div>
 
