--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -1,7 +1,7 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-      <h1>Vacation Calculator</h1>
+      <h1><span id="hheader">Vacation Calculator</span></h1>
       <table id="questiontable">
         <tr>
           <td id="gc1" class="surveytext">How many people will vacation together?</td>
