--- a/views/Shared/_display_buttons.ejs
+++ b/views/Shared/_display_buttons.ejs
@@ -8,7 +8,7 @@
     <tr>
       <td>
         <form>
-          <input class="shadow" id="surveyvalue" step=".5" type="number" value="2"><br>
+          <input class="shadow" id="surveyvalue" step=".5" type="number" value="2"></input><input id="surveyperc" step=".5" type="text" value=""></input><br>
         </form>
       </td>
     </tr>
