--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,7 +60,7 @@
         <figure class="pic-5"></figure>
         <figure class="pic-6"></figure>
   		  <figure class="pic-7"></figure>
-        <figure class="pic-8"></figure>
+        <!-- <figure class="pic-8"></figure> -->
   		</div>
     </div>
 
