pages are near immovable, added chris's features, project due

--- a/views/CostOwner/index.ejs
+++ b/views/CostOwner/index.ejs
@@ -21,7 +21,7 @@
       </table>
 
 <div id="reviewbox">
-      <div id="reviewleft">
+      <div id="reviewleft" class="fadeinout">
       <table>
           <tbody>
             <tr>
@@ -52,7 +52,7 @@
       </table>
     </div>
 
-    <div id="reviewright" class"reviewowner">
+    <div id="reviewrighta" class"reviewowner fadeinout">
       <table>
         <tr>
           <td class="largetext basictext">Annual Maintenance Fees: </td>
