--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -31,9 +31,10 @@
                   <!-- <div class="expbig flotbot italic">Ireland</div> -->
                 </div>
               <div class="expressright">
+                <br>
                 <div class="expbig">7 Days</div><br>
                 <div class="expbig">2 Bedroom</div><br>
-                <div id="date1" class="expmed"></div><br>
+                <!-- <div id="date1" class="expmed"></div><br> -->
                 <div class="expmed">Available Units (3)</div>
               </div>
             </div>
@@ -45,9 +46,10 @@
                   <!-- <div class="expbig flotbot italic">Orlando</div> -->
                 </div>
                 <div class="expressright">
+                  <br>
                   <div class="expbig">7 Days</div><br>
                   <div class="expbig">2 Bedroom</div><br>
-                  <div id="date2" class="expmed"></div><br>
+                  <!-- <div id="date2" class="expmed"></div><br> -->
                   <div class="expmed">Available Units (2)</div>
                 </div>
               </div>
@@ -59,9 +61,10 @@
                   <!-- <div class="expbig flotbot italic">Fiji</div> -->
                 </div>
                 <div class="expressright">
+                  <br>
                   <div class="expbig">7 Days</div><br>
                   <div class="expbig">1 Bedroom</div><br>
-                  <div id="date3" class="expmed"></div><br>
+                  <!-- <div id="date3" class="expmed"></div><br> -->
                   <div class="expmed">Available Units (2)</div>
                 </div>
               </div>
@@ -75,9 +78,10 @@
                   <!-- <div class="expbig flotbot italic">St Augustine</div> -->
                 </div>
                 <div class="expressright">
+                  <br>
                   <div class="expbig">7 Days</div><br>
                   <div class="expbig">3 Bedroom</div><br>
-                  <div id="date4" class="expmed"></div><br>
+                  <!-- <div id="date4" class="expmed"></div><br> -->
                   <div class="expmed">Available Units (1)</div>
                 </div>
               </div>
@@ -89,9 +93,10 @@
                   <!-- <div class="expbig flotbot italic">Myrtle Beach</div> -->
                 </div>
                 <div class="expressright">
+                  <br>
                   <div class="expbig">7 Days</div><br>
                   <div class="expbig">1 Bedroom</div><br>
-                  <div id="date5" class="expmed"></div><br>
+                  <!-- <div id="date5" class="expmed"></div><br> -->
                   <div class="expmed">Available Units (3)</div>
                 </div>
               </div>
@@ -103,9 +108,10 @@
                   <!-- <div class="expbig flotbot italic">Italy</div> -->
                 </div>
               <div class="expressright">
+                <br>
                 <div class="expbig">7 Days</div><br>
                 <div class="expbig">1 Bedroom</div><br>
-                <div id="date6" class="expmed"></div><br>
+                <!-- <div id="date6" class="expmed"></div><br> -->
                 <div class="expmed">Available Units (4)</div>
                 </div>
               </div>
@@ -116,10 +122,8 @@
 
       <div id="reviewboxe">
         <div id="reviewpic">
-          <h3>Vacation</h3>
-          <br>
+          <h5>Vacation</h5>
           <h4><div id="vacalocation"></div></h4>
-          <h5>7 Days - One Bedroom Condo</h5>
           <div id="smallreviewphoto">
             <div id="rotating-item-wrapper" class="qpolfix">
              <img id="planpic1" class="rotating-item Q-pol shadow" src="/images/ireland1.jpg"/>
@@ -143,7 +147,7 @@
             </tr>
           </table>
           <div style="width: 100%;">
-            <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+            <td><img style="width: 100%; height: .5vw;" src="/images/line.jpg"></td>
           </div>
           <div class="centertext" style="margin-top: 10px;">
             <span class="blackmoney expresstext expressheight">Total: </span>
@@ -160,7 +164,7 @@
           </tr>
           <tr>
             <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
-            <td><img class="starpowa" src="/images/fullstar.jpg"></td>
+            <td><img class="starpowa" style="float: right;" src="/images/fullstar.jpg"></td>
           </tr>
         </table>
         <div style="width: 100%;">
@@ -178,7 +182,7 @@
     <div id="reviewcongrats">
       <h6>Enjoy <span id="congratsloca"></span>!</h6>
       <br>
-      <h3>You just planned a vacation in <span id="congratslocb"></span> accommodations for</h3>
+      <h3>You just planned a vacation in <span id="congratslocb"></span> with accommodations for</h3>
       <br><br>
       <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
       <br>
