--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -7,7 +7,7 @@
           <td id="gc1" class="surveytext">How many people will vacation together?</td>
         </tr>
         <tr>
-          <td id="gc2" class="surveytext">What will a hotel generally cost per night?</td>
+          <td id="gc2" class="surveytext">What will accommodations generally cost per night?</td>
         </tr>
         <tr>
           <td id="gc3" class="surveytext">How many days do you vacation in a year?</td>
@@ -21,7 +21,7 @@
       </table>
 
 <div id="reviewbox">
-      <div id="reviewleft">
+      <div id="reviewleft" class="fadeinout">
       <table>
           <tbody>
             <tr>
@@ -52,7 +52,7 @@
       </table>
     </div>
 
-    <div id="reviewright" class"reviewowner">
+    <div id="reviewrighta" class"fadeinout">
       <div class="numberno">
         <h2>1</h2>
       </div>
@@ -67,7 +67,7 @@
         </tr>
       </table>
     </div>
-    <div id="reviewright" class"reviewowner">
+    <div id="reviewrightb" class"fadeinout">
       <div class="numberno">
         <h2>2</h2>
       </div>
