--- a/views/Shared/_display_buttons.ejs
+++ b/views/Shared/_display_buttons.ejs
@@ -1,20 +1,24 @@
-
+<a id="trigger" href="#"><img class="thumbpic darken shadow" src="/images/ThumbsUp.jpg"></a>
   <div id="divDisplayButtons" class="shadow">
-  <a id="trigger" href="#"><img class="thumbpic darken shadow" src="/images/ThumbsUp.jpg"></a>
+
   <table class="surveykeys">
     <tr>
-      <td><img id="up" class="arrow shadow" src="/images/arrowup.jpg"></td>
+      <td><img id="up" class="arrow darken shadow" src="/images/arrowup.jpg"></td>
     </tr>
     <tr>
       <td>
-        <form>
-          <input class="shadow" id="surveyvalue" step=".5" type="number" value="2"></input><input id="surveyperc" step=".5" type="text" value=""></input><br>
+        <form class="surveytoot">
+        <input id="surveycash" type="text" value=""></input>
+        <input id="surveyvalue" step=".5" type="number" value="2"></input>
+        <input id="surveyperc" type="text" value=""></input>
+        <br>
         </form>
       </td>
     </tr>
     <tr>
-      <td><img id="down" class="arrow shadow" src="/images/arrowdown.jpg"></td>
+      <td><img id="down" class="arrow darken shadow" src="/images/arrowdown.jpg"></td>
     </tr>
   </table>
-  <img id="divDisplaysignbase" class="shadow" src="/images/signbase.jpg">
-</div>
+
+  </div>
+<img id="divDisplaysignbase" class="shadow" src="/images/signbase.jpg"></img>
