--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -7,6 +7,7 @@
       <input type="hidden" id="totescost" />
       <input type="hidden" id="vacas" />
       <h1>Star Credits</h1>
+      <a href="#" id="btnBack"><img src="/images/back-small.png" /></a>
       <div id="starloc">
         <div class="starremaining">Stars Remaining</div>
         <div class="starright">
@@ -18,38 +19,40 @@
           <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
         </div>
       </div>
-      <a href="#" id="btnBack"><img src="/images/back-small.png" /></a>
 
       <div id="divExpressSelection">
         <div id="destinationchoice" class="planning">
           <div class="planlink tilt express-destination" data-destination="Ireland">
               <a id="Ireland" href="#"><img class="darken" src="/images/polaroidireland1.jpg"></a>
           </div>
-          <div class="planlink tilt express-destination" data-destination="Orlando">
-              <a id="Orlando" href="#"><img class="darken" src="/images/polaroidorlando1.jpg"></a>
+          <div class="planlink tilt express-destination" data-destination="Italy">
+              <a id="Italy" href="#"><img class="darken" src="/images/polaroidItaly1.jpg"></a>
           </div>
           <div class="planlink tilt express-destination" data-destination="Fiji">
               <a id="Fiji" href="#"><img class="darken" src="/images/polaroidfiji1.jpg"></a>
           </div>
-          <div class="planlink tilt express-destination" data-destination="Italy">
-              <a id="Italy" href="#"><img class="darken" src="/images/polaroidItaly1.jpg"></a>
+          <div class="planlink tilt express-destination" data-destination="Vegas">
+              <a id="Vegas" href="#"><img class="darken" src="/images/polaroidvegas1.jpg"></a>
           </div>
-          <div class="planlink tilt express-destination" data-destination="Daytona">
+          <div class="planpic tilt express-destination" data-destination="Orlando">
+              <a id="Orlando" href="#"><img class="darken" src="/images/polaroidorlando1.jpg"></a>
+          </div>
+          <div class="planpic tilt express-destination" data-destination="Daytona">
               <a id="Daytona" href="#"><img class="darken" src="/images/polaroiddaytona1.jpg"></a>
           </div>
-          <div class="planlink tilt express-destination" data-destination="MyrtleBeach">
+          <div class="planpic tilt express-destination" data-destination="MyrtleBeach">
               <a id="MyrtleBeach" href="#"><img class="darken" src="/images/polaroidmyrtlebeach1.jpg"></a>
+          </div>
+          <div class="planpic tilt express-destination" data-destination="GatlinBurg">
+              <a id="GatlinBurg" href="#"><img class="darken" src="/images/polaroidgatlinburg1.jpg"></a>
           </div>
         </div>
       </div>
 
       <div id="reviewboxe">
         <div id="reviewpic">
-          <h3>Vacation</h3>
-          <br>
+          <h5>Vacation</h5>
           <h4><div id="vacalocation"></div></h4>
-          <h5>7 Days - One Bedroom Condo</h5>
-          <div id="smallreviewphoto">
             <div id="rotating-item-wrapper" class="qpolfix">
              <img id="planpic1" class="rotating-item Q-pol shadow" src="/images/ireland1.jpg"/>
              <img id="planpic2" class="rotating-item Q-pol shadow" src="/images/ireland2.jpg"/>
@@ -57,11 +60,10 @@
              <img id="planpic4" class="rotating-item Q-pol shadow" src="/images/ireland4.jpg"/>
              <img id="planpic5" class="rotating-item Q-pol shadow" src="/images/ireland5.jpg"/>
             </div>
-          </div>
         </div>
 
       <div id="reviewspecs" class"reviewowner">
-        <h3>Credits & Fees</h3>
+        <h5>Credits & Fees</h5>
         <table>
           <tr>
             <td class="blacktext largetext">Processing Fee</td>
@@ -70,43 +72,45 @@
             <td><img class="starpowa" src="/images/fullstar.jpg"></td>
           </tr>
           <tr>
-            <td class="orangemoney largetext">Non Continental Fee</td>
-            <td class="orangemoney largetext">$275 =</td>
+            <td class="orangemoney largetext">Add Bed Upgrade</td>
+            <td class="orangemoney largetext">$189 =</td>
             <td></td>
             <td><img id="star2" class="starpowa" src="/images/emptystar.jpg"></td>
           </tr>
           <tr>
-            <td class="orangemoney largetext">2-Bedroom Upgrade</td>
-            <td class="orangemoney largetext">$189 =</td>
+            <td class="orangemoney largetext">Non Continental Fee</td>
+            <td class="orangemoney largetext">$275 =</td>
             <td></td>
             <td><img id="star3" class="starpowa" src="/images/emptystar.jpg"></td>
-          </tr>
-          <tr>
-            <td class="orangemoney largetext">3-Bedroom Upgrade</td>
-            <td class="orangemoney largetext">$378 =</td>
-            <td><img id="star4" class="starpowa" src="/images/emptystar.jpg"></td>
-            <td><img id="star5" class="starpowa" src="/images/emptystar.jpg"></td>
           </tr>
           <tr>
             <td class="orangemoney largetext">Peak Season Upgrade</td>
             <td class="orangemoney largetext">$275 =</td>
             <td></td>
-            <td><img id="star6" class="starpowa" src="/images/emptystar.jpg"></td>
-            <div id="startotals">$189 + 1 Star</div>
+            <td><img id="star4" class="starpowa" src="/images/emptystar.jpg"></td>
+          </tr>
+          <tr>
+            <td class="expressline"></td>
+            <td class="expressline"></td>
+            <td class="expressline"></td>
+            <td class="expressline"></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td class="orangemoney largetext">$189 +</td>
+            <td id="starcount" class="orangemoney largetext">1</td>
+            <td id="startotals" class="orangemoney largetext">Star</td>
           </tr>
         </table>
-        <div style="width: 100%;">
-          <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
-        </div>
-        <div id="startotals" class="orangemoney largetext"></div>
-    </div>
-      <div id="reviewbook">
-        <div class="bookington">
-          <img class="bookimage" src="/images/baggage.jpg"></img>
-          <h4>Book Vacation!</h4>
+
+      </div>
+        <div id="reviewbook">
+          <div class="bookington">
+            <img class="bookimage" src="/images/baggage.jpg"></img>
+            <h4 style="text-align: center;">Book Vacation!</h4>
+          </div>
         </div>
       </div>
-    </div>
 
 
     <div id="reviewcongrats" class="deadClass">
@@ -116,7 +120,7 @@
       <br><br>
       <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
       <br>
-      <h4><div id="mostars">You still have STARS! Go ahead, book another Expressway Week!</div></h4>
+      <h4><div id="mostars">You still have STARS! Go ahead, book another Vacation!</div></h4>
     </div>
     </div>
   </div>
