--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -26,7 +26,7 @@
               <a id="Ireland" href="#"><img class="darken" src="/images/polaroidireland1.jpg"></a>
           </div>
           <div class="planlink tilt express-destination" data-destination="Italy">
-              <a id="Italy" href="#"><img class="darken" src="/images/polaroidItaly1.jpg"></a>
+              <a id="Italy" href="#"><img class="darken" src="/images/polaroiditaly1.jpg"></a>
           </div>
           <div class="planlink tilt express-destination" data-destination="Fiji">
               <a id="Fiji" href="#"><img class="darken" src="/images/polaroidfiji1.jpg"></a>
