--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -303,8 +303,13 @@
     padding: .5vw;
     margin: 2vw 1vw 2vw 1vw;
     width: 25%;
-    height: 28vw;
+    height: 25vw;
     float: left;
+  }
+
+  #rotating-item-wrapper {
+    width: 80%;
+    height: 80%;
   }
 
   #reviewpic img {
@@ -321,7 +326,7 @@
     padding: .5vw;
     margin: 2vw 1vw 2vw 1vw;
     width: 22%;
-    height: 28vw;
+    height: 25vw;
     float: right;
   }
   //
@@ -350,7 +355,7 @@
     padding: .5vw;
     margin: 2vw 1vw 2vw 2vw;
     width: 43%;
-    height: 28vw;
+    height: 25vw;
     float: left;
   }
 
