--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -51,20 +51,22 @@
     width: 45%;
     height: 39%;
     margin: 2.5%;
+    border-radius: 1.5vw;
     display: inline-block !important;
   }
 
   .divHomeLinks div {
     overflow: hidden;
+    border-radius: 1.5vw;
     height: 100%;
-    border-radius: .7vw;
   }
 
   .divHomeLinks img {
-    width: 100%;
+    width: 105%;
     display: block;
     object-fit: contain;
-    border-radius: .7vw;
+    border-radius: 1.5vw;
+    margin-left: -2.5%;
   }
 
   .homepics {
@@ -204,6 +206,7 @@
 
   .expbig {
     font-size: 1.5vw;
+    margin-top: -0.3vw;
     font-weight: bold;
     color: #000000;
     font-family: Verdana, Geneva, serif;
@@ -211,7 +214,8 @@
   }
 
   .expmed {
-    font-size: 1.2vw;
+    font-size: 1.05vw;
+    margin-top: -0.3vw;
     font-weight: bold;
     color: #000000;
     font-family: Verdana, Geneva, serif;
@@ -276,9 +280,9 @@
     height: 10%;
     border: 4px #0088bb solid;
     border-radius: .7vw;
-    width: 59%;
+    width: 73%;
     background-color: #ffffff;
-    margin: 0% 20% 2% 0%;
+    margin: 0% 10% 2% 0%;
   }
 
   #reviewleft {
@@ -586,8 +590,8 @@
 
   .expressright {
     float: right;
-    margin-right: 10px;
-    margin-top: -220px;
+    margin-right: 1vw;
+    margin-top: -11vw;
     text-align: center;
   }
 
@@ -604,8 +608,8 @@
   }
 
   .expresspic {
-    width: 45%;
-    height: 80%;
+    width: 42%;
+    height: 75%;
     margin-top: 10px;
     margin-left: 10px;
     border: 1px solid #000000;
@@ -621,14 +625,12 @@
   }
 
   .sixth {
-    width: 96%;
-    height: 92%;
-    min-width: 95%;
-    min-height: 91%;
+    width: 24vw;
+    height: 13.5vw;
     background-color: #aaaaaa;
     border-radius: 1vw;
     border: 2px solid #000000;
-    margin: 4%;
+    margin: -0.5vw 0vw 0.8vw 2vw;
     display: inline-block;
   }
 
@@ -695,6 +697,13 @@
   .starpowa {
     width: 3vw;
     height: 3vw;
+    border-radius: 35%;
+  }
+
+  .starloca {
+    width: 3.5vw;
+    height: 3.5vw;
+    border-radius: 35%;
   }
 
   .right-text {
