--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -2,23 +2,23 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
 
-      <div class="divHomeLinks">
-        <a href="/Survey"><div class="darken shadow spin"><img src="/images/skilodge.jpg"></div></a>
+      <div class="divHomeLinks darken shadow spin">
+        <a href="/Survey"><div><img src="/images/calculator.png"></div></a>
         <span class="hiddentext">Vacation Calculator</span>
       </div>
 
-      <div class="divHomeLinks">
-        <a href="/Owner"><div class="darken shadow spin"><img src="/images/yurts.jpg"></div></a>
+      <div class="divHomeLinks darken shadow spin">
+        <a href="/Owner"><div><img src="/images/owner.jpg"></div></a>
         <span class="hiddentext">Owner Calculator</span>
       </div>
 
-      <div class="divHomeLinks">
-        <a href="/Planning"><div class="darken shadow spin"><img src="/images/luau.jpg"></div></a>
+      <div class="divHomeLinks darken shadow spin">
+        <a href="/Planning"><div><img src="/images/starcredit.png"></div></a>
         <span class="hiddentext">Star Credits</span>
       </div>
 
-      <div class="divHomeLinks">
-        <a href="/ExpressWays"><div class="darken shadow spin"><img src="/images/london.jpg"></div></a>
+      <div class="divHomeLinks darken shadow spin">
+        <a href="/ExpressWays"><div><img src="/images/expressway.png"></div></a>
         <span class="hiddentext">Expressway Weeks</span>
       </div>
 
