--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -11,12 +11,14 @@
       <div id="starloc">
         <div class="starremaining">Stars Remaining</div>
         <div class="starright">
-          <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz1" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz2" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz3" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz4" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz5" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz6" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz7" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz8" class="starloca" src="/images/fullstar.jpg">
         </div>
       </div>
 
