--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
     <div id="divSurveyScreen">
       <a href="/SurveyHome" id="lnkHomeIcon"><img class="darken shadow homeicon" src="/images/home.jpg" id="homeIcon"></a>
 
-      <div class="corner-ribbon top-right sticky red">Alpha Testing</div>
+      <!-- <div class="corner-ribbon top-right sticky red">Alpha Testing</div> -->
 
       <%- body %>
       <div class="pic-wrapper" style="z-index:-1;">
