--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -2,7 +2,7 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
     <div id="divExpressWeek" class="content-pane">
-      <input type="hidden" id="starz" value="6" />
+      <input type="hidden" id="starz" value="8" />
       <input type="hidden" id="totstars" value="1" />
       <input type="hidden" id="location" />
       <input type="hidden" id="totescost" />
@@ -11,12 +11,14 @@
       <div id="starloc">
         <div class="starremaining">Stars Remaining</div>
         <div class="starright">
-          <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
-          <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz1" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz2" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz3" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz4" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz5" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz6" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz7" class="starloca" src="/images/fullstar.jpg">
+          <img id="starz8" class="starloca" src="/images/fullstar.jpg">
         </div>
       </div>
       <a href="#" id="btnBack"><img src="/images/back-small.png" /></a>
@@ -28,7 +30,7 @@
               <div class="sixth express-destination" data-destination="Ireland">
                 <div>
                   <img class="expresspic darken" src="/images/polaroidireland1.jpg">
-                  <!-- <div class="expbig flotbot italic">Ireland</div> -->
+
                 </div>
               <div class="expressright">
                 <br>
@@ -43,7 +45,7 @@
               <div class="sixth express-destination" data-destination="Orlando">
                 <div>
                   <img class="expresspic darken" src="/images/polaroidorlando1.jpg">
-                  <!-- <div class="expbig flotbot italic">Orlando</div> -->
+
                 </div>
                 <div class="expressright">
                   <br>
@@ -58,7 +60,7 @@
               <div class="sixth express-destination" data-destination="Fiji">
                 <div>
                   <img class="expresspic darken" src="/images/polaroidfiji1.jpg">
-                  <!-- <div class="expbig flotbot italic">Fiji</div> -->
+
                 </div>
                 <div class="expressright">
                   <br>
@@ -75,7 +77,7 @@
               <div class="sixth express-destination" data-destination="St Augustine">
                 <div>
                   <img class="expresspic darken" src="/images/polaroidstaugustine1.jpg">
-                  <!-- <div class="expbig flotbot italic">St Augustine</div> -->
+
                 </div>
                 <div class="expressright">
                   <br>
@@ -90,7 +92,7 @@
               <div class="sixth express-destination" data-destination="Myrtle Beach">
                 <div>
                   <img class="expresspic darken" src="/images/polaroidmyrtlebeach1.jpg">
-                  <!-- <div class="expbig flotbot italic">Myrtle Beach</div> -->
+                  
                 </div>
                 <div class="expressright">
                   <br>
@@ -164,16 +166,16 @@
           </tr>
           <tr>
             <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
-            <td><img class="starpowa" style="float: right;" src="/images/fullstar.jpg"></td>
+            <td><img class="starpowa" style="float: right;" src="/images/fullstare.jpg"></td>
           </tr>
         </table>
         <div style="width: 100%;">
-          <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+          <td><img style="width: 100%; height: .5vw;" src="/images/line.jpg"></td>
         </div>
         <div class="centertext">
-          <span class="blackmoney expresstext expressheight">Total: </span>
-          <span class="orangemoney expresstext expressheight">$189 + </span>
-          <img class="starpowa" src="/images/fullstar.jpg"><br><br><br>
+          <span class="blackmoney expresstext expressheight" style="float: bottom;">Total: </span>
+          <span class="orangemoney expresstext expressheight" style="float: bottom;">$189 + </span>
+          <img class="starpowa" src="/images/fullstare.jpg"><br><br><br>
         </div>
         <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
       </div>
