printbutton, backbutton not squished, reset stars, no new pic though

--- a/views/Shared/_display_buttons.ejs
+++ b/views/Shared/_display_buttons.ejs
@@ -1,9 +1,10 @@
-<a id="trigger" href="#"><img class="thumbpic darken shadow" src="/images/ThumbsUp.jpg"></a>
+<a id="trigger" href="#"><img class="thumbpic darken shadow" src="/images/ThumbsUp.jpg"/></a>
+<a id="printbutt" href="javascript:window.print()"><img class="printbutt darken shadow" src="/images/printbutton.png"/></a>
   <div id="divDisplayButtons" class="shadow">
 
   <table class="surveykeys">
     <tr>
-      <td><img id="up" class="arrow darken shadow" src="/images/arrowup.jpg"></td>
+      <td><img id="up" class="arrow darken shadow" src="/images/arrowup.jpg"/></td>
     </tr>
     <tr>
       <td>
@@ -16,7 +17,7 @@
       </td>
     </tr>
     <tr>
-      <td><img id="down" class="arrow darken shadow" src="/images/arrowdown.jpg"></td>
+      <td><img id="down" class="arrow darken shadow" src="/images/arrowdown.jpg"/></td>
     </tr>
   </table>
 
