--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -22,6 +22,26 @@
     margin-right: 1.5vw;
   }
 
+  .printbutt {
+    border-radius: 50%;
+    height: 8vw;
+    width: 8vw;
+    opacity: 0;
+    position: absolute;
+    bottom: 2vw;
+    left: 2vw;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    z-index: 10;
+  }
+
+  .printbutt:hover {
+    margin-right: 1.5vw;
+  }
+
   .arrow {
     width: 20%;
     border-radius: 50%;
@@ -90,7 +110,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    opacity: 0.7;
+    opacity: 0.8;
     width: 8%;
     height: 8%;
   }
@@ -874,8 +894,8 @@
     }
 
     #btnBack img {
-      width: 7%;
-      height: 7%;
+      width: 3.5vw;
+      height: 3.5vw;
     }
 
     .express-destination {
