--- a/views/Shared/_display_buttons.ejs
+++ b/views/Shared/_display_buttons.ejs
@@ -1,5 +1,6 @@
 <a id="trigger" href="#"><img class="thumbpic darken shadow" src="/images/ThumbsUp.jpg"/></a>
-<a id="printbutt" href="javascript:window.print()"><img class="printbutt darken shadow" src="/images/printbutton.png"/></a>
+<!-- <a id="printbutt" href="javascript:window.print()"><img class="printbutt darken shadow" src="/images/printbutton.png"/></a> -->
+<a href="http://www.printfriendly.com" style="color:#6D9F00;text-decoration:none;" class="printfriendly printbutt" onclick="window.print();return false;" title="Printer Friendly and PDF"><img src="/images/printbutton.png" alt="Print Friendly and PDF"/></a>
   <div id="divDisplayButtons" class="shadow">
 
   <table class="surveykeys">
