--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,6 +42,7 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/css/dataTables.bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/print.css.less" media="print">
     <!--STYLES END-->
   </head>
 
@@ -89,7 +90,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
