--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,6 +43,7 @@
     <link rel="stylesheet" href="/styles/css/dataTables.bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/print.css.less" media="print">
+    <link rel="stylesheet" href="/styles/survey.css.less" media="screen">
     <!--STYLES END-->
   </head>
 
