--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -28,6 +28,7 @@
 // etc.
 
 @import '../../bower_components/bootstrap/less/bootstrap.less';
+@import 'survey.css.less';
 @import 'infinite-rotator.css.less';
 @import 'ken-burns-effect.css.less';
 @import 'odometer.css.less';
