--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -1,3 +1,31 @@
+@media print {
+  #printbutt {
+    display: none;
+  }
+  #lnkHomeIcon {
+    display: none;
+  }
+  #reviewleft {
+    width: 100%;
+    font-size: 3vw;
+    border-style: hidden;
+
+  }
+  #reviewrighta {
+    font-size: 3vw;
+    border-style: hidden;
+    width: 40%;
+
+  }
+  #reviewrightb {
+    font-size: 3vw;
+    border-style: hidden;
+    width: 40%;
+
+  }
+
+}
+@media screen {
 #divSurveyScreen {
   width: 100vw;
   height: 100vh;
@@ -988,4 +1016,5 @@
 
 
   }
+}
 }
